    CHANGED: quickfilter expands wildcards
    CHANGED: duplicate tab / open in new tab:
             create the new tab next to the current one.
    CHANGED: filter settings are saved/restored individually for each tab.
    CHANGED: filter settings are remembered when changing view type
    CHANGED: All view settings are saved/restored individually for each tab.

    FIXED: [ 272876, 274269 ] crash when refreshing view
    FIXED: [ 3191155 (sf.net) ] Moving a symbolic link changes attributes of target file
    FIXED: [ 2998795 (sf.net) ] "Show actions toolbar" setting is not saved
    FIXED: Url commandline argument opens a new tab instead of switching to an existing one
    FIXED: root mode action does not work with newer versions of kdesu, thanks to CyberCastle
    FIXED: switching tabs sometimes doesn't switch the panel
    FIXED: [ 3004510 (sf.net) ] Double-clicking executables start in ~/Documents folder
    FIXED: [ 2996188 (sf.net) ] relative path for custom folder icon doesn't work
    FIXED: [ 2915020 (sf.net) ] wrong icon for directory symlink
    FIXED: when switching tabs, sometimes the new tab isn't set active
    FIXED: [ 263253 ] View displays wrong total size in some circumstances.

2.3.0-beta1 "New Horizons"
==========================

    ADDED: option: Panel > General > Flat Origin Bar
    ADDED: option: Panel > Buttons > Toolbar buttons have icons
    ADDED: listpanel buttons: Back, Forward
    ADDED: options: Panel > Layout >
           Layout / Frame Color / Frame Shape / Frame Shadow
    ADDED: QuickFilter - default shortcut: CTRL+i
    ADDED: option: Panel > View > Show directories first
    ADDED: actions: Back/Forward in history
    ADDED: action: Set Focus to the Panel - shortcut: ESC
    ADDED: actions: Move Focus Up/Down - shortcut: CTRL+SHIFT+Up/Down
    ADDED: selection dialog option: Apply selection to directories
    ADDED: option: Startup > User Interface > Update default panel settings