@@ -26,6 +26,7 @@
     CHANGED: filter settings are remembered when changing view type
     CHANGED: All view settings are saved/restored individually for each tab.
 
+    FIXED: [ 2773302 (sf.net) ] krarc can't handle brackets in file paths inside ZIP archive
     FIXED: [ 272876, 274269 ] crash when refreshing view
     FIXED: [ 3191155 (sf.net) ] Moving a symbolic link changes attributes of target file
     FIXED: [ 2998795 (sf.net) ] "Show actions toolbar" setting is not saved
